--- a/public/index.html
+++ b/public/index.html
@@ -24,20 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Hangman</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>Welcome to Hangman!</h1>
+    <p>1. Make a hangman game using react principles from chap 2</p>
+    <p>2. This game should have multiple components, run in docker and have a clear well edited readme</p>
+    <p>3. The game should have the functionailty shown in the paper prototype.</p>
+    <p>4. At minimum the game should have a header, a new game button, a search box, images for the hangman, a popup when someone wins or loses</p>
+    <p>5. cont. a missed letters list, tries left (optional), </p>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
